Unify openstack version comparisons
use OSVer enum comparisons in all Jinja2 templates

Related-Issue: PRODX-3456
Change-Id: Ic9a9f48bc3a6dd586c9c17bc723eb0117297ab03

--- a/openstack_controller/templates/child_objects/compute.yaml
+++ b/openstack_controller/templates/child_objects/compute.yaml
@@ -191,7 +191,7 @@ nova:
       - port: 6082
         name: n-spice
         protocol: TCP
-{%- if spec.openstack_version in ['queens', 'rocky', 'stein'] %}
+{%- if OSVer[spec.openstack_version] <= OSVer.stein %}
     nova-placement-api:
       connections:
         egress:
@@ -336,7 +336,7 @@ nova:
       pod_labels:
         application: nova
         component: ks-user
-{%- if spec.openstack_version in ['queens', 'rocky', 'stein'] %}
+{%- if OSVer[spec.openstack_version] <= OSVer.stein %}
     placement-ks-endpoints:
       connections:
         egress:
