--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -1,8 +1,7 @@
 # IMPORTANT: list items specified here is not possible to override as they
 # appended during merging
 {%- set nginx_ingress_namespace_class = "openstack-ingress-nginx" %}
-{%- set openstack_yoga_plus = openstack_version not in ("queens", "rocky", "stein", "train", "ussuri", "victoria", "wallaby", "xena") %}
-{%- if openstack_yoga_plus %}
+{%- if OSVer[openstack_version] >= OSVer.yoga %}
   {%- set cirros_image_name = "Cirros-6.0" %}
   {%- set dhcp_client = "dhcpcd" %}
 {%- else %}
@@ -47,7 +46,7 @@ features:
     - networking
     - orchestration
     - messaging
-{%- if openstack_version not in ['queens', 'rocky'] %}
+{%- if OSVer[openstack_version] >= OSVer.stein %}
     - placement
 {%- endif %}
     - coordination
@@ -57,7 +56,7 @@ features:
     - descheduler
     - dynamic-resource-balancer
   network_policies:
-{%- if openstack_yoga_plus %}
+{%- if OSVer[openstack_version] >= OSVer.yoga %}
     enabled: true
 {%- else %}
     enabled: false
@@ -95,7 +94,7 @@ services:
   dashboard:
     horizon:
       values:
-        {%- if openstack_version in ['queens'] %}
+        {%- if OSVer[openstack_version] <= OSVer.queens %}
         conf:
           horizon:
             local_settings:
@@ -103,7 +102,7 @@ services:
                 tungstenfabric:
                   dashboard_name: contrail_openstack_dashboard.overrides
         {%- endif %}
-        {%- if OSVer.antelope <= OSVer[openstack_version] %}
+        {%- if OSVer[openstack_version] >= OSVer.antelope %}
         conf:
           policy.d:
             nova:
@@ -124,7 +123,7 @@ services:
             ingress:
               classes:
                 namespace: {{ nginx_ingress_namespace_class }}
-        {%- if openstack_version in ['queens', 'rocky'] %}
+        {%- if OSVer[openstack_version] <= OSVer.rocky %}
         conf:
           DEFAULT:
             api_extensions_path: 'extensions:/var/lib/openstack/lib/python2.7/site-packages/neutron_plugin_contrail/extensions'
@@ -145,7 +144,7 @@ services:
     nova:
       values:
         conf:
-          {%- if OSVer.antelope <= OSVer[openstack_version] %}
+          {%- if OSVer[openstack_version] >= OSVer.antelope %}
           policy.d:
             01-controller-default.yaml:
               "os_compute_api:os-migrate-server:migrate": "rule:project_member_or_admin"
@@ -161,7 +160,7 @@ services:
               # - AggregateNumInstancesFilter
               - AggregateTypeAffinityFilter
               # - AllHostsFilter
-              {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'xena', 'wallaby', 'yoga', 'zed', 'antelope', 'caracal'] %}
+              {%- if OSVer[openstack_version] <= OSVer.caracal %}
               - AvailabilityZoneFilter
               {%- endif %}
               - ComputeFilter
@@ -179,7 +178,7 @@ services:
               # - NumInstancesFilter
               - PciPassthroughFilter
             libvirt:
-            {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri'] %}
+            {%- if OSVer[openstack_version] <= OSVer.ussuri %}
               live_migration_use_ip_to_scp_configdrive: true
             {%- else %}
               migrations_use_ip_to_scp: true
@@ -310,7 +309,7 @@ services:
             - (?:tempest.api.compute.admin.test_live_migration.LiveAutoBlockMigrationV225Test.test_volume_backed_live_migration)
             - (?:tempest.api.compute.admin.test_live_migration.LiveMigrationTest.test_volume_backed_live_migration)
           {%- endif %}
-          {%- if not openstack_yoga_plus %}
+          {%- if OSVer[openstack_version] >= OSVer.yoga %}
             - (?:tempest.api.image.v2.test_images.ImportImagesTest.test_image_glance_direct_import)
           {%- endif %}
             # Tests NOT supported by product
@@ -345,7 +344,7 @@ services:
             # NOTE(vsaienko): let nova scheduler pick destination host
             compute-feature-enabled:
               can_migrate_between_any_hosts: false
-            {%- if OSVer.antelope <= OSVer[openstack_version] %}
+            {%- if OSVer[openstack_version] >= OSVer.antelope %}
               cold_migration_nonadmin: true
               live_migration_nonadmin: true
             {%- endif %}
@@ -417,7 +416,7 @@ services:
         conf:
           policy.d:
             01-controller-default.yaml:
-            {%- if openstack_version not in ['queens', 'rocky'] %}
+            {%- if OSVer[openstack_version] >= OSVer.stein %}
               # TODO(vsaienko): drop policy settings in upstream values.yaml to ensure in-code policy
               # defaults are used.
               secret_project_match: project_id:%(target.secret.project_id)s
@@ -438,9 +437,9 @@ services:
                 rule:secret_decrypt_non_private_read or rule:secret_project_creator or
                 rule:secret_project_admin or rule:secret_acl_read or
                 role:global-secret-decoder
-            {%- if openstack_version in ['queens', 'rocky', 'stein'] %}
+            {%- if OSVer[openstack_version] <= OSVer.stein %}
               'order:delete': rule:admin_or_creator
-            {%- elif openstack_version in ['train', 'ussuri', 'victoria'] %}
+            {%- elif OSVer[openstack_version] <= OSVer.victoria %}
               'order:delete': rule:admin_or_creator and project_id:%(target.order.project_id)s
             {%- else %}
               # TODO(pas-ha): re-check validity for 2023.1
