--- a/openstack_controller/templates/services/messaging.yaml
+++ b/openstack_controller/templates/services/messaging.yaml
@@ -3,7 +3,7 @@
 
 {%- from 'macros/messaging_service_creds.j2' import messaging_service_creds %}
 {%- set latest_openstack_versions = openstack_versions[openstack_versions.index(spec.openstack_version):openstack_versions.index(spec.openstack_version)+2] %}
-{%- if spec.openstack_version in openstack_versions[openstack_versions.index('yoga'):-1] %}
+{%- if OSVer.yoga <= OSVer[spec.openstack_version] < OSVer.master %}
   {%- set next_openstack_versions = openstack_versions[openstack_versions.index(spec.openstack_version)+1:] %}
   {%- for next_openstack_version in next_openstack_versions %}
     {%- if next_openstack_version in slurp_releases %}
