--- a/openstack_controller/templates/services/alarming.yaml
+++ b/openstack_controller/templates/services/alarming.yaml
@@ -48,7 +48,7 @@ spec:
             gnocchi_external_project_owner: service
             gnocchi_external_domain_name: service
           coordination:
-{%- if spec.openstack_version in ("antelope","caracal",) %}
+{%- if OSVer.antelope <= OSVer[spec.openstack_version] < OSVer.master %}
             backend_url: {{ get_etcd3_endpoint(spec.openstack_version, 'etcd3gw') }}
 {%- else %}
             #There are some problems with etcd3+http driver so we shouldn't use it
@@ -58,7 +58,7 @@ spec:
           keystone_authtoken:
             memcache_security_strategy: ENCRYPT
             memcache_secret_key: {{ credentials[0].memcached }}
-            {%- if spec.openstack_version not in ("queens", "rocky", "stein") %}
+            {%- if OSVer[spec.openstack_version] >= OSVer.train %}
             service_type: alarming
             {%- endif %}
           database:
